fastapi-kubernetes/kubernetes/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dax-api
  labels:
    component: dax-api
  namespace: dataplatform-analytics
spec:
  selector:
    app: dax-api
  ports:
  - port: 80
    targetPort: 80
